upd artists info

--- a/_posts/artists/0003-01-01-solcast.md
+++ b/_posts/artists/0003-01-01-solcast.md
@@ -1,9 +1,10 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/solcast/
 category: artists
 title: Solcast
-photo_cover: 
+photo_cover: https://img.discogs.com/TBq80EA4jsYYNki67Vi98i2X9BA=/600x420/smart/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/A-588934-1189590722.jpeg.jpg
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
 style: Psychill
@@ -12,6 +13,6 @@ bandcamp:
 facebook: 
 soundcloud: 
 soundcloud_id: 
-youtube_id: 
+youtube_id: PLp2GaPnw5O3MTiJcRf6o0RQMk_yzY6IEX
 discogs: https://www.discogs.com/artist/588934-Solcast
 ---
