--- a/_posts/artists/0024-01-01-neirula.md
+++ b/_posts/artists/0024-01-01-neirula.md
@@ -1,10 +1,11 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/neirula/
 category: artists
 title: NeiRula
-photo_cover: 
-name: Yulia Levchenko
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/11155147_944876652213094_4677345104223556489_o.jpg?oh=3fc3183f2bcd10a5f5b824e780b1fd25&oe=59E1A42B
+name: Julia Levchenko
 location: Kyiv, Ukraine
 style: Psychill
 website: 
@@ -12,6 +13,6 @@ bandcamp:
 facebook: https://www.facebook.com/NeiRula
 soundcloud: https://soundcloud.com/dj-zea
 soundcloud_id: 542110
-youtube_id: 
+youtube_id: PLp2GaPnw5O3OYLgZHuo8ZH-ZRi5rVF1R-
 discogs: https://www.discogs.com/artist/1375975-NeiRula
 ---
