--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -1,12 +1,13 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/calamus/
 category: artists
 title: Calamus
-photo_cover: 
+photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/13316971_1595316877447167_5695491197630908707_o.jpg?oh=e6275ea6218a4b9151b7c412f0b15042&oe=59DB8081
 name: Vasily Sagaydak
 location: Odesa, Ukraine
-style: forest psytrance
+style: Forest Psytrance
 website: 
 bandcamp: 
 facebook: 
