--- a/_posts/artists/0034-01-01-senzar.md
+++ b/_posts/artists/0034-01-01-senzar.md
@@ -1,17 +1,18 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/senzar/
 category: artists
 title: Senzar
-photo_cover: 
-name: 
-location: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/1930213_15315143117_1490_n.jpg?oh=c76874a20084d76c229df1bdc36912a0&oe=59A1184E
+name: Thoke Thomsen
+location: Arhus, Denmark
 style: Psychill
 website: 
 bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud_id: 
-youtube_id: 
+facebook: https://www.facebook.com/Senzar-15313053117
+soundcloud: https://soundcloud.com/senzar
+soundcloud_id: 495992
+youtube_id: PLp2GaPnw5O3Nw43srJrm6OU9tILdEKlHL
 discogs: https://www.discogs.com/artist/469097-Senzar
 ---
