--- a/_posts/artists/0041-01-01-vonoom.md
+++ b/_posts/artists/0041-01-01-vonoom.md
@@ -1,17 +1,18 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/vonoom/
 category: artists
 title: Vonoom
-photo_cover: 
-name: 
-location: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/665835_10151261155724728_2132354460_o.jpg?oh=49d917556f67669cc64f4d7cea07fe30&oe=59A9A83A
+name: Michael Sundø
+location: Copenhagen, Denmark
 style: Psychill
 website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud_id: 
-youtube_id: 
+bandcamp: https://vonoom.bandcamp.com
+facebook: https://www.facebook.com/vonoom
+soundcloud: https://soundcloud.com/vonoom
+soundcloud_id: 234066
+youtube_id: PLp2GaPnw5O3NOMI_e5O7WZF77m6DJ1dnA
 discogs: https://www.discogs.com/artist/1646258-Vonoom
 ---
