--- a/_posts/artists/0057-01-01-sygnals.md
+++ b/_posts/artists/0057-01-01-sygnals.md
@@ -1,17 +1,18 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/sygnals/
 category: artists
 title: Sygnals
-photo_cover: 
-name: 
-location: 
-style: Psychill
+photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/413013_307380099304598_1123480871_o.jpg?oh=b1946a5251e6010a92971236989ebf3f&oe=59A617AC
+name: Phoebus Noussis & Aristides Katsinopoulos
+location: Athens, Greece
+style: Psychill, Chillgressive
 website: 
-bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud_id: 
-youtube_id: 
+bandcamp: https://sygnals.bandcamp.com
+facebook: https://www.facebook.com/Sygnals
+soundcloud: https://soundcloud.com/sygnals
+soundcloud_id: 5606377
+youtube_id: PLp2GaPnw5O3PhZY5xQx9rZ-7d89hHiaoN
 discogs: https://www.discogs.com/artist/1954663-Sygnals
 ---
