--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -1,9 +1,10 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/shiva3/
 category: artists
 title: Shiva3
-photo_cover: 
+photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/1417676_627539813972623_807893536_o.jpg?oh=c87ddb0466429ab466d85c5947f5f6f9&oe=59A63E00
 name: Averin Andrey
 location: Kyiv, Ukraine
 style: psytrance
@@ -12,6 +13,6 @@ bandcamp:
 facebook: https://www.facebook.com/ShivaOmArtist
 soundcloud: https://soundcloud.com/shiva3
 soundcloud_id: 3035661
-youtube_id: 
+youtube_id: PLp2GaPnw5O3O4pWHqQZ35ihycdlQyPntZ
 discogs: https://www.discogs.com/artist/1276953-Shiva3
 ---
