--- a/_posts/artists/0092-01-01-capsula.md
+++ b/_posts/artists/0092-01-01-capsula.md
@@ -1,17 +1,18 @@
 ---
+published: true
 layout: page-artist
 permalink: /artist/capsula/
 category: artists
 title: Capsula
-photo_cover: 
-name: 
-location: 
-style: Psychill
+photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/306043_4417774760867_1321159756_n.jpg?oh=cb17851ad5f237a7df78b37e0581ddeb&oe=59DD7AF7
+name: Yosi Shamay
+location: New York, Israel
+style: Psychill, Psydub
 website: 
 bandcamp: 
-facebook: 
-soundcloud: 
-soundcloud_id: 
+facebook: https://www.facebook.com/dreamcapsula
+soundcloud: https://soundcloud.com/capsula-israel
+soundcloud_id: 14001491
 youtube_id: PLp2GaPnw5O3OV4FYuC8t-BAfVSKL5qnPO
 discogs: https://www.discogs.com/artist/296858-Capsula
 ---
