fix Dagas - Age Of Aquarius bpm

--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -35,7 +35,7 @@ Have a nice trip!
 Tracklist:
 
 01. Zymosis feat. Katya Chilly - U Zemli [140bpm]
-02. Dagas - Age Of Aquarius [60-120bpm]
+02. Dagas - Age Of Aquarius [60bpm]
 03. Hair! - Hashish (Capsula Remix) [99.5bpm]
 04. Spectrum Vision - Mono Town [90bpm]
 05. AstroPilot - Breath Of Fate [102bpm]
