add release_date, upd Tracklists

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -11,6 +11,7 @@ cat_no: sencd018
 cat_nu: sencd018 lgcd02
 tracks_no: 12
 total_time: 
+release_date: 2010-06-15
 coming_soon: 
 popular: 
 youtube_id: 0_KTyCON5Hw&list=PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
@@ -20,7 +21,7 @@ link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
 link_junodownload: http://www.junodownload.com/products/grower/1606631-02
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
-compiled_by: <a href='https://irukanji-music.com' target='_blank'>Irukanji</a>
+compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
 artwork_by: <a href='https://messdivision.com' target='_blank'>Ju Ju</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Makus (Overdream Studio)</a>
 ---
