--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -11,6 +11,7 @@ cat_no: sencd024
 cat_nu: sencd024
 tracks_no: 10
 total_time: 
+release_date: 2017-04-13
 coming_soon: 
 popular: true
 youtube_id: JlH5YyaPkzQ&list=PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
@@ -20,7 +21,7 @@ link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_junodownload: 
 link_ektoplazm: 
 link_discogs: 1164819
-compiled_by: <a href='/artist/irukanji'>Irukanji</a>
+compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
 artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
 mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Makus (Overdream Studio)</a>
 ---
@@ -34,13 +35,13 @@ Have a nice trip!
 ---
 Tracklist:
 
-01. Zymosis feat. Katya Chilly - U Zemli [140bpm]
-02. Dagas - Age Of Aquarius [60bpm]
-03. Hair! - Hashish (Capsula Remix) [99.5bpm]
-04. Spectrum Vision - Mono Town [90bpm]
-05. AstroPilot - Breath Of Fate [102bpm]
-06. Crystal Vibe - Neuron [111bpm]
-07. Chronos - Cultural Legacy (Live Version) [110bpm]
-08. Overdream - Flat Earthers [113bpm]
-09. Daoine Sidhe - Horizon Shifter [115bpm]
-10. Irukanji - Clooney [125bpm]
+01. Zymosis feat. Katya Chilly - U Zemli \| 140bpm
+02. Dagas - Age Of Aquarius \| 60bpm
+03. Hair! - Hashish (Capsula Remix) \| 99.5bpm
+04. Spectrum Vision - Mono Town \| 90bpm
+05. AstroPilot - Breath Of Fate \| 102bpm
+06. Crystal Vibe - Neuron \| 111bpm
+07. Chronos - Cultural Legacy (Live Version) \| 110bpm
+08. Overdream - Flat Earthers \| 113bpm
+09. Daoine Sidhe - Horizon Shifter \| 115bpm
+10. Irukanji - Clooney \| 125bpm
