--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -35,15 +35,15 @@ The compilation includes tracks as well-known projects, such as: Overdream (Ukra
 ---
 Tracklist:
 
-01. Atati - Versions [60bpm]
-02. Spectrum Vision - Outsiders [100bpm]
-03. Mahaon - Leaving The Limit (feat. Locus) [75bpm]
-04. Vonoom - Dirty Dishwater [80bpm]
-05. Overdream - Mystique Cabalistique [92bpm]
-06. E.R.S. - I Went Irie (The Orient Funk Experience) [100bpm]
-07. Irukanji - Muti Cappa [88bpm]
-08. ShizoLizer Gin - Sweet Dino [100bpm]
-09. Xylonite - Thermal Expansion [125bpm]
-10. Unusual Cosmic Process - Cosmic Harmony [96bpm]
-11. Liquid Crystal - Raindrops [90bpm]
-12. Kalpataru Tree - MetaLullaby [77bpm]
+01. Atati - Versions \| 60bpm
+02. Spectrum Vision - Outsiders \| 100bpm
+03. Mahaon - Leaving The Limit (feat. Locus) \| 75bpm
+04. Vonoom - Dirty Dishwater \| 80bpm
+05. Overdream - Mystique Cabalistique \| 92bpm
+06. E.R.S. - I Went Irie (The Orient Funk Experience) \| 100bpm
+07. Irukanji - Muti Cappa \| 88bpm
+08. ShizoLizer Gin - Sweet Dino \| 100bpm
+09. Xylonite - Thermal Expansion \| 125bpm
+10. Unusual Cosmic Process - Cosmic Harmony \| 96bpm
+11. Liquid Crystal - Raindrops \| 90bpm
+12. Kalpataru Tree - MetaLullaby \| 77bpm
