--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -2,6 +2,7 @@
 layout: page-release
 permalink: /release/va-grower/
 category: releases
+comments: true
 title: VA «Grower»
 label: lookinglook
 style: Psychill, Psydub
