--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -2,6 +2,7 @@
 layout: page-release
 permalink: /release/va-the-ten/
 category: releases
+comments: true
 title: 'VA «The Ten»'
 label: sentimony
 style: Psychill, Chillgressive
