--- a/_posts/artists/0034-01-01-senzar.md
+++ b/_posts/artists/0034-01-01-senzar.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/senzar/
 category: artists
+comments: true
 title: Senzar
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/1930213_15315143117_1490_n.jpg?oh=c76874a20084d76c229df1bdc36912a0&oe=59A1184E
 name: Thoke Thomsen
