--- a/_posts/artists/0041-01-01-vonoom.md
+++ b/_posts/artists/0041-01-01-vonoom.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/vonoom/
 category: artists
+comments: true
 title: Vonoom
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/665835_10151261155724728_2132354460_o.jpg?oh=49d917556f67669cc64f4d7cea07fe30&oe=59A9A83A
 name: Michael Sundø
