--- a/_posts/artists/0057-01-01-sygnals.md
+++ b/_posts/artists/0057-01-01-sygnals.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/sygnals/
 category: artists
+comments: true
 title: Sygnals
 photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/413013_307380099304598_1123480871_o.jpg?oh=b1946a5251e6010a92971236989ebf3f&oe=59A617AC
 name: Phoebus Noussis & Aristides Katsinopoulos
