--- a/_posts/artists/0003-01-01-solcast.md
+++ b/_posts/artists/0003-01-01-solcast.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/solcast/
 category: artists
+comments: true
 title: Solcast
 photo_cover: https://img.discogs.com/TBq80EA4jsYYNki67Vi98i2X9BA=/600x420/smart/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/A-588934-1189590722.jpeg.jpg
 name: Valeriy Kuznetsov & Konstantin Savchenko
