--- a/_posts/artists/0014-01-01-chronos.md
+++ b/_posts/artists/0014-01-01-chronos.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/chronos/
 category: artists
+comments: true
 title: Chronos
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/12670456_10153514548428237_2321832387671281020_n.jpg?oh=b28f31763daa2124102e6f80acce7bea&oe=5981FE7A
 name: Nick Klimenko
