--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/shiva3/
 category: artists
+comments: true
 title: Shiva3
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/1417676_627539813972623_807893536_o.jpg?oh=c87ddb0466429ab466d85c5947f5f6f9&oe=59A63E00
 name: Averin Andrey
