--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/ufomatka/
 category: artists
+comments: true
 title: Ufomatka
 photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/12472592_1032149250179272_406723084862806739_n.jpg?oh=e004b4f9d242fd255dccad962fe921a1&oe=597B314D
 name: Alexandr Yemelyanov
