--- a/_posts/artists/0084-01-01-tentura.md
+++ b/_posts/artists/0084-01-01-tentura.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/tentura/
 category: artists
+comments: true
 title: Tentura
 photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/562682_269214476516339_2045088094_n.jpg?oh=95bed7f3d1a492c9ec5f8de26c408359&oe=59B36901
 name: Alexandr Pidgornyi
