--- a/_posts/artists/0092-01-01-capsula.md
+++ b/_posts/artists/0092-01-01-capsula.md
@@ -3,6 +3,7 @@ published: true
 layout: page-artist
 permalink: /artist/capsula/
 category: artists
+comments: true
 title: Capsula
 photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/306043_4417774760867_1321159756_n.jpg?oh=cb17851ad5f237a7df78b37e0581ddeb&oe=59DD7AF7
 name: Yosi Shamay
