--- a/_posts/artists/0003-01-01-solcast.md
+++ b/_posts/artists/0003-01-01-solcast.md
@@ -5,7 +5,7 @@ permalink: /artist/solcast/
 category: artists
 comments: true
 title: Solcast
-photo_cover: https://img.discogs.com/TBq80EA4jsYYNki67Vi98i2X9BA=/600x420/smart/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/A-588934-1189590722.jpeg.jpg
+photo_cover: https://content.sentimony.com/assets/img/artists/large/solcast.jpg
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
 style: Psychill
