rework popular -> new

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -14,7 +14,7 @@ tracks_no: 12
 total_time: 
 release_date: 2010-06-15
 coming_soon: 
-popular: 
+new: 
 youtube_id: 0_KTyCON5Hw&list=PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 youtube_playlist_id: PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 bandcamp_id: 1678520944
