--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -14,7 +14,7 @@ tracks_no: 10
 total_time: 
 release_date: 2017-04-13
 coming_soon: 
-popular: true
+new: true
 youtube_id: JlH5YyaPkzQ&list=PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 youtube_playlist_id: PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 bandcamp_id: 1710048583
