--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -23,8 +23,8 @@ link_junodownload:
 link_ektoplazm: 
 link_discogs: 1164819
 compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
-artwork_by: <a href='https://www.facebook.com/andytrootootoo' target='_blank'>Trootootoo</a>
-mastered_by: <a href='http://overdreamstudio.com' target='_blank'>Makus (Overdream Studio)</a>
+artwork_by: <a href='https://www.facebook.com/andytrootootoo' target="_blank" rel="noopener">Trootootoo</a>
+mastered_by: <a href='http://overdreamstudio.com' target="_blank" rel="noopener">Makus (Overdream Studio)</a>
 ---
 
 Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
