--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -22,9 +22,9 @@ link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_junodownload: 
 link_ektoplazm: 
 link_discogs: 1164819
-compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
-artwork_by: <a href='https://www.facebook.com/andytrootootoo' target="_blank" rel="noopener">Trootootoo</a>
-mastered_by: <a href='http://overdreamstudio.com' target="_blank" rel="noopener">Makus (Overdream Studio)</a>
+compiled_by: <a href="/artist/irukanji/">Irukanji</a>
+artwork_by: <a href="https://www.facebook.com/andytrootootoo" target="_blank" rel="noopener">Trootootoo</a>
+mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus (Overdream Studio)</a>
 ---
 
 Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
