--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -22,9 +22,9 @@ link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
 link_junodownload: http://www.junodownload.com/products/grower/1606631-02
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
-compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
-artwork_by: <a href='https://messdivision.com' target="_blank" rel="noopener">Ju Ju</a>
-mastered_by: <a href='http://overdreamstudio.com' target="_blank" rel="noopener">Makus (Overdream Studio)</a>
+compiled_by: <a href="/artist/irukanji/">Irukanji</a>
+artwork_by: <a href="https://messdivision.com" target="_blank" rel="noopener">Ju Ju</a>
+mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus (Overdream Studio)</a>
 ---
 
 Lookinglook Records team is pleased to present our second release - chill-out compilation, titled «Grower».
