--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -20,6 +20,7 @@ youtube_playlist_id: PLp2GaPnw5O3MM1mWFvfVOKf35NKCJHEhk
 bandcamp_id: 1710048583
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_junodownload: 
+link_beatspace: 
 link_ektoplazm: 
 link_discogs: 1164819
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
