--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -20,6 +20,7 @@ youtube_playlist_id: PLp2GaPnw5O3OeeTCsMzapg-teocv3XDnT
 bandcamp_id: 1678520944
 link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
 link_junodownload: http://www.junodownload.com/products/grower/1606631-02
+link_beatspace: 
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
