--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -23,6 +23,7 @@ link_junodownload: http://www.junodownload.com/products/grower/1606631-02
 link_beatspace: 
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
+written_by: 
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
 artwork_by: <a href="https://messdivision.com" target="_blank" rel="noopener">Ju Ju</a>
 mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus (Overdream Studio)</a>
