--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -5,7 +5,7 @@ permalink: /artist/harax/
 category: artists
 comments: true
 title: Harax
-photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/478099_324941487612703_562367879_o.jpg?oh=34d580ed87067ba6642edb227e4489d6&oe=59E846D7
+photo_cover: https://content.sentimony.com/assets/img/artists/large/harax.jpg
 name: Denis Botsvin
 location: Kharkov, Ukraine
 style: Psychill
