--- a/_posts/artists/0015-01-01-dagas.md
+++ b/_posts/artists/0015-01-01-dagas.md
@@ -5,7 +5,7 @@ permalink: /artist/dagas/
 category: artists
 comments: true
 title: Dagas
-photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t1.0-9/10574470_10152178271795807_8041256690801616792_n.jpg?oh=a3e7450c61e1d82401c3af7beeb9473a&oe=59873816
+photo_cover: https://content.sentimony.com/assets/img/artists/large/dagas.jpg
 name: Osvaldo Quintero
 location: Panama City, Panam
 style: Psychill
