--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -5,7 +5,7 @@ permalink: /artist/ufomatka/
 category: artists
 comments: true
 title: Ufomatka
-photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/12472592_1032149250179272_406723084862806739_n.jpg?oh=e004b4f9d242fd255dccad962fe921a1&oe=597B314D
+photo_cover: https://content.sentimony.com/assets/img/artists/large/ufomatka.jpg
 name: Alexandr Yemelyanov
 location: Kyiv, Ukraine
 style: Goa Trance
