--- a/_posts/artists/0083-01-01-eguana.md
+++ b/_posts/artists/0083-01-01-eguana.md
@@ -5,7 +5,7 @@ permalink: /artist/eguana/
 category: artists
 comments: true
 title: Eguana
-photo_cover: https://i1.sndcdn.com/avatars-000046862720-yb6oed-t500x500.jpg
+photo_cover: https://content.sentimony.com/assets/img/artists/large/eguana.jpg
 name: Sergey Severin
 location: Tver, Russian Federation
 style: Psychill, Ambient
