--- a/_posts/artists/0004-01-01-zymosis.md
+++ b/_posts/artists/0004-01-01-zymosis.md
@@ -5,7 +5,7 @@ permalink: /artist/zymosis/
 category: artists
 comments: true
 title: Zymosis
-photo_cover: https://scontent-frx5-1.xx.fbcdn.net/v/t31.0-8/18768421_830975260393165_2614610363443809064_o.jpg?oh=4c3ed86c7f626ca360934f50fab55fc9&oe=59E1AEF9
+photo_cover: https://content.sentimony.com/assets/img/artists/large/zymosis.jpg
 name: Dmitriy Likhachev
 location: Kyiv, Ukraine
 style: Psychill
