--- a/_posts/artists/0024-01-01-neirula.md
+++ b/_posts/artists/0024-01-01-neirula.md
@@ -5,7 +5,7 @@ permalink: /artist/neirula/
 category: artists
 comments: true
 title: NeiRula
-photo_cover: https://scontent-fra3-1.xx.fbcdn.net/v/t31.0-8/11155147_944876652213094_4677345104223556489_o.jpg?oh=3fc3183f2bcd10a5f5b824e780b1fd25&oe=59E1A42B
+photo_cover: https://content.sentimony.com/assets/img/artists/large/neirula.jpg
 name: Julia Levchenko
 location: Kyiv, Ukraine
 style: Psychill
