--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -5,7 +5,7 @@ permalink: /artist/calamus/
 category: artists
 comments: true
 title: Calamus
-photo_cover: https://scontent-frt3-1.xx.fbcdn.net/v/t31.0-8/13316971_1595316877447167_5695491197630908707_o.jpg?oh=e6275ea6218a4b9151b7c412f0b15042&oe=59DB8081
+photo_cover: https://content.sentimony.com/assets/img/artists/large/calamus.jpg
 name: Vasily Sagaydak
 location: Odesa, Ukraine
 style: Forest Psytrance
