global Artists upd :elephant:

--- a/_posts/artists/0003-01-01-solcast.md
+++ b/_posts/artists/0003-01-01-solcast.md
@@ -5,7 +5,7 @@ permalink: /artist/solcast/
 category: artists
 comments: true
 title: Solcast
-photo_cover: https://content.sentimony.com/assets/img/artists/large/solcast.jpg
+photo: true
 name: Valeriy Kuznetsov & Konstantin Savchenko
 location: Kharkov, Ukraine
 style: Psychill
