--- a/_posts/artists/0005-01-01-heinali.md
+++ b/_posts/artists/0005-01-01-heinali.md
@@ -5,7 +5,7 @@ permalink: /artist/heinali/
 category: artists
 comments: true
 title: Heinali
-photo_cover: https://content.sentimony.com/assets/img/artists/large/heinali.jpg
+photo: true
 name: Oleg Shpudeiko
 location: Kyiv, Ukraine
 style: Psychill
