--- a/_posts/artists/0014-01-01-chronos.md
+++ b/_posts/artists/0014-01-01-chronos.md
@@ -5,7 +5,7 @@ permalink: /artist/chronos/
 category: artists
 comments: true
 title: Chronos
-photo_cover: https://content.sentimony.com/assets/img/artists/large/chronos.jpg
+photo: true
 name: Nick Klimenko
 location: Moscow, Russian Federation
 style: Psychill
