--- a/_posts/artists/0015-01-01-dagas.md
+++ b/_posts/artists/0015-01-01-dagas.md
@@ -5,7 +5,7 @@ permalink: /artist/dagas/
 category: artists
 comments: true
 title: Dagas
-photo_cover: https://content.sentimony.com/assets/img/artists/large/dagas.jpg
+photo: true
 name: Osvaldo Quintero
 location: Panama City, Panam
 style: Psychill
