--- a/_posts/artists/0023-01-01-irukanji.md
+++ b/_posts/artists/0023-01-01-irukanji.md
@@ -5,7 +5,7 @@ permalink: /artist/irukanji/
 category: artists
 comments: true
 title: Irukanji
-photo_cover: https://content.sentimony.com/assets/img/artists/large/irukanji.jpg
+photo: true
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
 style: Psychill, Chillgressive, Forest Psytrance
