--- a/_posts/artists/0024-01-01-neirula.md
+++ b/_posts/artists/0024-01-01-neirula.md
@@ -5,7 +5,7 @@ permalink: /artist/neirula/
 category: artists
 comments: true
 title: NeiRula
-photo_cover: https://content.sentimony.com/assets/img/artists/large/neirula.jpg
+photo: true
 name: Julia Levchenko
 location: Kyiv, Ukraine
 style: Psychill
