--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -5,7 +5,7 @@ permalink: /artist/shiva3/
 category: artists
 comments: true
 title: Shiva3
-photo_cover: https://content.sentimony.com/assets/img/artists/large/shiva3.jpg
+photo: true
 name: Averin Andrey
 location: Kyiv, Ukraine
 style: psytrance
