--- a/_posts/artists/0034-01-01-senzar.md
+++ b/_posts/artists/0034-01-01-senzar.md
@@ -5,7 +5,7 @@ permalink: /artist/senzar/
 category: artists
 comments: true
 title: Senzar
-photo_cover: https://content.sentimony.com/assets/img/artists/large/senzar.jpg
+photo: true
 name: Thoke Thomsen
 location: Arhus, Denmark
 style: Psychill
