--- a/_posts/artists/0041-01-01-vonoom.md
+++ b/_posts/artists/0041-01-01-vonoom.md
@@ -5,7 +5,7 @@ permalink: /artist/vonoom/
 category: artists
 comments: true
 title: Vonoom
-photo_cover: https://content.sentimony.com/assets/img/artists/large/vonoom.jpg
+photo: true
 name: Michael Sundø
 location: Copenhagen, Denmark
 style: Psychill
