--- a/_posts/artists/0057-01-01-sygnals.md
+++ b/_posts/artists/0057-01-01-sygnals.md
@@ -5,7 +5,7 @@ permalink: /artist/sygnals/
 category: artists
 comments: true
 title: Sygnals
-photo_cover: https://content.sentimony.com/assets/img/artists/large/sygnals.jpg
+photo: true
 name: Phoebus Noussis & Aristides Katsinopoulos
 location: Athens, Greece
 style: Psychill, Chillgressive
