--- a/_posts/artists/0001-01-01-harax.md
+++ b/_posts/artists/0001-01-01-harax.md
@@ -5,7 +5,7 @@ permalink: /artist/harax/
 category: artists
 comments: true
 title: Harax
-photo_cover: https://content.sentimony.com/assets/img/artists/large/harax.jpg
+photo: true
 name: Denis Botsvin
 location: Kharkov, Ukraine
 style: Psychill
