--- a/_posts/artists/0004-01-01-zymosis.md
+++ b/_posts/artists/0004-01-01-zymosis.md
@@ -5,7 +5,7 @@ permalink: /artist/zymosis/
 category: artists
 comments: true
 title: Zymosis
-photo_cover: https://content.sentimony.com/assets/img/artists/large/zymosis.jpg
+photo: true
 name: Dmitriy Likhachev
 location: Kyiv, Ukraine
 style: Psychill
