--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -5,7 +5,7 @@ permalink: /artist/calamus/
 category: artists
 comments: true
 title: Calamus
-photo_cover: https://content.sentimony.com/assets/img/artists/large/calamus.jpg
+photo: true
 name: Vasily Sagaydak
 location: Odesa, Ukraine
 style: Forest Psytrance
