--- a/_posts/artists/0064-01-01-ufomatka.md
+++ b/_posts/artists/0064-01-01-ufomatka.md
@@ -5,7 +5,7 @@ permalink: /artist/ufomatka/
 category: artists
 comments: true
 title: Ufomatka
-photo_cover: https://content.sentimony.com/assets/img/artists/large/ufomatka.jpg
+photo: true
 name: Alexandr Yemelyanov
 location: Kyiv, Ukraine
 style: Goa Trance
