--- a/_posts/artists/0084-01-01-tentura.md
+++ b/_posts/artists/0084-01-01-tentura.md
@@ -5,7 +5,7 @@ permalink: /artist/tentura/
 category: artists
 comments: true
 title: Tentura
-photo_cover: https://content.sentimony.com/assets/img/artists/large/tentura.jpg
+photo: true
 name: Alexandr Pidgornyi
 location: Kyiv, Ukraine
 style: Psychill, Chillgressive
