--- a/_posts/artists/0093-01-01-capsula.md
+++ b/_posts/artists/0093-01-01-capsula.md
@@ -5,7 +5,7 @@ permalink: /artist/capsula/
 category: artists
 comments: true
 title: Capsula
-photo_cover: https://content.sentimony.com/assets/img/artists/large/capsula.jpg
+photo: true
 name: Yosi Shamay
 location: New York, Israel
 style: Psychill, Psydub
