--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -22,6 +22,7 @@ link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_junodownload: 
 link_beatspace: 
 link_itunes: 
+link_googleplaymusic: 
 link_ektoplazm: 
 link_discogs: 1164819
 written_by: 
