add link_applemusic into all releases

--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -21,8 +21,8 @@ bandcamp_id: 1710048583
 link_bandcamp: https://sentimony.bandcamp.com/album/va-the-ten
 link_junodownload: 
 link_beatspace: 
-link_itunes: 
-link_googleplaymusic: 
+link_applemusic: https://itunes.apple.com/ua/album/the-ten/id1272441640?l=uk
+link_googlemusic: 
 link_ektoplazm: 
 link_discogs: 1164819
 written_by: 
