--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -21,8 +21,8 @@ bandcamp_id: 1678520944
 link_bandcamp: https://sentimony.bandcamp.com/album/va-grower
 link_junodownload: http://www.junodownload.com/products/grower/1606631-02
 link_beatspace: 
-link_itunes: 
-link_googleplaymusic: 
+link_applemusic: https://itunes.apple.com/ua/album/grower/id1272413722?l=uk
+link_googlemusic: 
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: 339908
 written_by: 
