--- a/_posts/artists/0023-01-01-irukanji.md
+++ b/_posts/artists/0023-01-01-irukanji.md
@@ -9,7 +9,7 @@ photo: true
 name: Ihor Orlovskyi
 location: Kyiv, Ukraine
 style: Psychill, Chillgressive, Forest Psytrance
-website: https://irukanji-music.com
+website: https://irukanji.sentimony.com
 bandcamp: https://irukanji.bandcamp.com
 facebook: https://www.facebook.com/irukanji.music
 soundcloud: https://soundcloud.com/irukanji-music
