--- a/_posts/artists/0032-01-01-calamus.md
+++ b/_posts/artists/0032-01-01-calamus.md
@@ -14,6 +14,6 @@ bandcamp:
 facebook: 
 soundcloud: https://soundcloud.com/calamus_treetrolla
 soundcloud_id: 3383071
-youtube_id: 
+youtube_id: PLp2GaPnw5O3P3Wsuf4LhX3q3Y-rzlUvE2
 discogs: https://www.discogs.com/artist/549097-Calamus
 ---
