rework link_googleplay

--- a/_posts/artists/0033-01-01-shiva3.md
+++ b/_posts/artists/0033-01-01-shiva3.md
@@ -8,7 +8,7 @@ title: Shiva3
 photo: true
 name: Averin Andrey
 location: Kyiv, Ukraine
-style: psytrance
+style: Psytrance
 website: 
 bandcamp: 
 facebook: https://www.facebook.com/ShivaOmArtist
