--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -28,7 +28,7 @@ link_discogs: 339908
 written_by: 
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
 artwork_by: <a href="https://messdivision.com" target="_blank" rel="noopener">Ju Ju</a>
-mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus (Overdream Studio)</a>
+mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus @ Overdream Studio</a>
 ---
 
 Lookinglook Records team is pleased to present our second release - chill-out compilation, titled «Grower».
