--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -5,7 +5,7 @@ category: releases
 comments: true
 title: VA «Grower»
 label: lookinglook
-style: Psychill, Psydub
+style: Psychill, Downtempo
 format: compilation
 cover: true
 cat_no: sencd018
