fix link_discogs at releases

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -24,7 +24,7 @@ link_beatspace:
 link_applemusic: https://itunes.apple.com/ua/album/grower/id1272413722?l=uk
 link_googleplay: https://play.google.com/music/m/Bq7xsasj75chkyf32mcdy64b5fm?t=Grower
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
-link_discogs: 339908
+link_discogs: https://www.discogs.com/master/339908
 written_by: 
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
 artwork_by: <a href="https://messdivision.com" target="_blank" rel="noopener">Ju Ju</a>
