--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -24,7 +24,7 @@ link_beatspace:
 link_applemusic: https://itunes.apple.com/ua/album/the-ten/id1272441640?l=uk
 link_googleplay: https://play.google.com/music/m/B3rgynbx4fslvsij3cdhfvbfijq?t=The_Ten
 link_ektoplazm: 
-link_discogs: 1164819
+link_discogs: https://www.discogs.com/master/1164819
 written_by: 
 compiled_by: <a href="/artist/irukanji/">Irukanji</a>
 artwork_by: <a href="https://www.facebook.com/andytrootootoo" target="_blank" rel="noopener">Trootootoo</a>
