--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -33,7 +33,7 @@ mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener"
 
 Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
 
-Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by Irukanji.
+Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by <a href="/artist/irukanji/">Irukanji</a>.
 
 Have a nice trip!
 
