--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -35,7 +35,7 @@ Lookinglook Records (sublabel of Sentimony Records) team is pleased to present o
 
 This new release mixed different styles: from classic chill-out with ambient to dub with downtempo. Tracks smoothly flow into one another and complement each other.
 
-The compilation includes tracks as well-known projects, such as: Overdream (Ukraine), Spectrum Vision (Russia), Vonoom (Denmark), Irukanji (Ukraine), Kalpataru Tree (USA), Unusual Cosmic Process (Ukraine); and 'newcomers', such as: Atati (Ukraine), Mahaon (Russia), E.R.S. (India), ShizoLizer Gin (Ukraine), Xylonite (Russia) and Liquid Crystal (Russia).
+The compilation includes tracks as well-known projects, such as: <a href="/artist/overdream/">Overdream</a> (Ukraine), <a href="/artist/spectrum-vision/">Spectrum Vision</a> (Russia), <a href="/artist/spectrum-vision/">Vonoom</a> (Denmark), <a href="/artist/irukanji/">Irukanji</a> (Ukraine), Kalpataru Tree (USA), <a href="/artist/unusual-cosmic-process/">Unusual Cosmic Process</a> (Ukraine); and 'newcomers', such as: Atati (Ukraine), Mahaon (Russia), E.R.S. (India), <a href="/artist/shizolizer-gin/">ShizoLizer Gin</a> (Ukraine), Xylonite (Russia) and Liquid Crystal (Russia).
 
 Have a nice grow!
 
