upd all total_time

--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -11,7 +11,7 @@ cover: true
 cat_no: sencd018
 cat_nu: sencd018 lgcd02
 tracks_no: 12
-total_time: 
+total_time: '79:21'
 release_date: 2010-06-15
 coming_soon: 
 new: 
