--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -11,7 +11,7 @@ cover: true
 cat_no: sencd024
 cat_nu: sencd024
 tracks_no: 10
-total_time: 
+total_time: '74:28'
 release_date: 2017-04-13
 coming_soon: 
 new: true
