--- a/_posts/releases/2017-04-13-va-the-ten.md
+++ b/_posts/releases/2017-04-13-va-the-ten.md
@@ -26,14 +26,14 @@ link_googleplay: https://play.google.com/music/m/B3rgynbx4fslvsij3cdhfvbfijq?t=T
 link_ektoplazm: 
 link_discogs: https://www.discogs.com/master/1164819
 written_by: 
-compiled_by: <a href="/artist/irukanji/">Irukanji</a>
-artwork_by: <a href="https://www.facebook.com/andytrootootoo" target="_blank" rel="noopener">Trootootoo</a>
-mastered_by: <a href="http://overdreamstudio.com" target="_blank" rel="noopener">Makus @ Overdream Studio</a>
+compiled_by: <a href='/artist/irukanji/'>Irukanji</a>
+artwork_by: <a href='https://www.facebook.com/andytrootootoo" target="_blank" rel="noopener'>Trootootoo</a>
+mastered_by: <a href='http://overdreamstudio.com" target="_blank" rel="noopener'>Makus @ Overdream Studio</a>
 ---
 
 Specially for The Tenth Label Birthday, Sentimony Records team is ready to present a new psychill compilation «The Ten».
 
-Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by <a href="/artist/irukanji/">Irukanji</a>.
+Here your will find The Ten exciting journeys by The Ten well-tried psychill minds carefully selected by <a href='/artist/irukanji/'>Irukanji</a>.
 
 Have a nice trip!
 
