--- a/_posts/releases/2010-06-15-va-grower.md
+++ b/_posts/releases/2010-06-15-va-grower.md
@@ -26,9 +26,9 @@ link_googleplay: https://play.google.com/music/m/Bq7xsasj75chkyf32mcdy64b5fm?t=G
 link_ektoplazm: http://www.ektoplazm.com/free-music/grower
 link_discogs: https://www.discogs.com/master/339908
 written_by: 
-compiled_by: <a href='/artist/irukanji/'>Irukanji</a> & Ju Ju
-artwork_by: <a href='https://messdivision.com" target="_blank" rel="noopener'>Ju Ju</a>
-mastered_by: <a href='http://overdreamstudio.com" target="_blank" rel="noopener'>Makus @ Overdream Studio</a>
+compiled_by: <a href='/artist/irukanji/'>Irukanji</a> & <a href='https://www.instagram.com/julenca' target='_blank' rel='noopener'>Ju Ju</a>
+artwork_by: <a href='https://www.instagram.com/julenca' target='_blank' rel='noopener'>Ju Ju</a>
+mastered_by: <a href='http://overdreamstudio.com' target='_blank' rel='noopener'>Makus @ Overdream Studio</a>
 ---
 
 Lookinglook Records (sublabel of Sentimony Records) team is pleased to present our second release - chill-out compilation, titled «Grower», compiled by <a href='/artist/irukanji/'>Irukanji</a> & Ju Ju.
